--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
     --color-window-gray-light: #e6e6e6;
     --color-window-blue-dark: #0545B4;
     --color-window-blue-light: #47A8D1;
+    --color-drop-shadow: #2626287d;
 }
 
 *{
